--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "AI/Calling/AI-Enhanced-CustomerSupport-And-BusinessInsights/--Back-End"]
 	path = AI/Calling/AI-Enhanced-CustomerSupport-And-BusinessInsights/--Back-End
 	url = git@github.com:ACS-SampleProjects/OpenAIGateway.git
+[submodule "AI/Calling/AI-Enhanced-CustomerSupport-And-BusinessInsights/Back-End"]
+	path = AI/Calling/AI-Enhanced-CustomerSupport-And-BusinessInsights/Back-End
+	url = git@github.com:ACS-SampleProjects/OpenAIGateway.git
