--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "AI/Calling/AI-Enhanced-CustomerSupport-And-BusinessInsights/Back-End"]
 	path = AI/Calling/AI-Enhanced-CustomerSupport-And-BusinessInsights/Back-End
 	url = git@github.com:ACS-SampleProjects/OpenAIGateway.git
+[submodule "AI/Calling/AI-Enhanced-CustomerSupport-And-BusinessInsights/Front-End"]
+	path = AI/Calling/AI-Enhanced-CustomerSupport-And-BusinessInsights/Front-End
+	url = https://github.com/elavarasidc/communication-services-javascript-quickstarts
